kubernetes/apps/default/paperless-ngx/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.clustrs.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-ngx
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Paperless-ngx"
    gethomepage.dev/description: "Document management system"
    gethomepage.dev/group: "Documents"
    gethomepage.dev/icon: "mdi-file-document-multiple"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "paperless.${DOMAIN_CLUSTER}"
  rules:
    - backendRefs:
        - name: paperless-ngx
          port: 8000
